[metadata]
name = synthaser
author = Cameron Gilchrist
description = Automatic prediction and classification of protein domain architectures
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/gamcil/synthaser
license = MIT
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
install_requires =
	requests
	biopython
test_require =
	pytest
	pytest-cov
	pytest-mock
	requests-mock

[options.entry_points]
console_scripts =
	synthaser = synthaser.main:main
